[gd_scene load_steps=4 format=3 uid="uid://mm5oykduviv6"]

[ext_resource type="Script" path="res://3_pics_1_word/letters/letters.gd" id="1_g4p3i"]

[sub_resource type="CanvasTexture" id="CanvasTexture_u540r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t1mis"]
size = Vector2(50, 50)

[node name="Letters" type="Node2D"]
script = ExtResource("1_g4p3i")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.254902, 0.858824, 1, 1)
scale = Vector2(50, 50)
texture = SubResource("CanvasTexture_u540r")

[node name="Label" type="Label" parent="."]
offset_left = -20.0
offset_top = -11.0
offset_right = 20.0
offset_bottom = 12.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_t1mis")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
